# mcpboilerplate

./: .gitignore  README.md  agent_base.py  main.py  pyproject.toml  run.bat  run.sh  run_trend_analysis.py
src/trend_radar/: __init__.py  debug_visualization.py  main.py  trend.py
src/trend_radar/agents/: __init__.py  analysis_agent.py  base_agent.py  data_collector.py  orchestrator.py  reporting_agent.py  visualization_agent.py
src/trend_radar/models/: __init__.py  mcp_message.py
src/trend_radar/orchestrator/: __init__.py  trend_radar_orchestrator.py
src/trend_radar/scripts/: debug_visualization.py  examples.txt  quick_integration_test.py
src/trend_radar/utils/: __init__.py  llm_client.py  logger.py  plotter.py  web_scraper.py
tests/: __init__.py  test_agents.py  test_html_integration.py  test_plots.py
