[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trend-radar-mcp"
version = "1.0.0"
description = "A Model Context Protocol demonstration with trend radar analysis using four specialized agents"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Trend Radar Team"},
]
keywords = [
    "mcp",
    "model-context-protocol", 
    "trend-analysis",
    "radar-chart",
    "ai-agents",
    "llm"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "asyncio-mqtt>=0.16.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/trend-radar-mcp"
Documentation = "https://trend-radar-mcp.readthedocs.io/"
Repository = "https://github.com/your-org/trend-radar-mcp"
"Bug Tracker" = "https://github.com/your-org/trend-radar-mcp/issues"

[project.scripts]
trend-radar = "trend_radar.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/trend_radar"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
